--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stop watch</title>
-    <link rel="stylesheet" href="../src/style/style.css">
+    <link rel="stylesheet" href="./src/style/style.css">
 </head>
 <body>
     <h2>Stop watch</h2>
@@ -20,6 +20,6 @@
         <button id="reset">Reset</button>
     </div>
 
-    <script src="../src/script/script.js"></script>
+    <script src="./src/script/script.js"></script>
 </body>
 </html>
